fix: add overflow to right content

--- a/src/app/modules/search/search.component.scss
+++ b/src/app/modules/search/search.component.scss
@@ -2,6 +2,7 @@
   height: 100%;
   display: grid;
   grid-template-rows: max-content auto max-content;
+  overflow-y: scroll;
 
   main {
     margin: 0 1rem;
